Started modifying Envelope for Z support. Fixed MBR error when creating new view and adding a layer Fixed bug in Preview Added GeoJson Support Fixed sql column data type conversion errors